# git-move

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
man/: asciidoc.conf
src/: help.sh  main.sh  version.sh
